[project]
name = "langchain-practice"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=4.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
